fixed spacing between sections

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -405,6 +405,7 @@ body{
 	.misc_wrapper{
 		background: rgba(248, 248, 240, 0.54);
 		padding-top: 60px;
+		margin-top: 75px;
 		z-index: 5;
 		#circle_bubble{
 			background: rgb(248, 248, 240);
